--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
         </div>
     </section>
 
+    <!-- Video Section -->
+    <section class="video-section">
+        <video class="video-block" autoplay muted loop playsinline>
+            <source src="boliche.mp4" type="video/mp4">
+        </video>
+    </section>
+
     <!-- Info Section -->
     <section class="info-section">
         <div class="info-card cuando">
