--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="style.css" as="style">
-    <link rel="preload" href="boliche.webm" as="video" type="video/webm">
-    <link rel="preload" href="brillo.webm" as="video" type="video/webm">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -77,7 +74,7 @@
 
     <!-- Video Section -->
     <section class="video-section">
-        <video id="boliche-video" class="video-block" autoplay muted loop playsinline preload="auto">
+        <video id="boliche-video" class="video-block" autoplay muted loop playsinline preload="metadata">
             <source src="boliche.webm" type="video/webm">
         </video>
     </section>
@@ -133,8 +130,7 @@
 
     <!-- Video Brillo Section -->
     <section class="video-section">
-        <video id="brillo-video" class="video-block" autoplay muted loop playsinline preload="auto">
-            <source src="brillo.webm" type="video/webm">
+        <video id="brillo-video" class="video-block lazy-video" muted loop playsinline preload="none" data-src="brillo.webm">
         </video>
     </section>
 
