--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
             <p>Los Álamos 28, Puerto Manzano</p>
             <div class="map-container">
                 <iframe
-                    src="https://www.openstreetmap.org/export/embed.html?bbox=-71.575%2C-40.775%2C-71.545%2C-40.745&layer=mapnik&marker=-40.76%2C-71.56"
+                    src="https://maps.google.com/maps?q=Los+Alamos+28+Puerto+Manzano+Neuquen&t=&z=15&ie=UTF8&iwloc=&output=embed"
                     width="100%"
                     height="300"
                     style="border:0; border-radius: 10px;"
-                    loading="lazy">
+                    loading="lazy"
+                    allowfullscreen=""
+                    referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
             <a href="https://www.google.com/maps/search/Los+Alamos+28+Puerto+Manzano" target="_blank" class="modal-btn map-external-link">Abrir en Google Maps</a>
