--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <div class="hero-video-carousel">
+            <video class="hero-video active" autoplay muted loop playsinline>
+                <source src="boliche.webm" type="video/webm">
+            </video>
+            <video class="hero-video" muted loop playsinline>
+                <source src="brillo.webm" type="video/webm">
+            </video>
+        </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 class="hero-title">Juana</h1>
@@ -72,13 +80,6 @@
                 <span class="countdown-label">Segundos</span>
             </div>
         </div>
-    </section>
-
-    <!-- Video Section -->
-    <section class="video-section">
-        <video id="boliche-video" class="video-block" autoplay muted loop playsinline preload="metadata">
-            <source src="boliche.webm" type="video/webm">
-        </video>
     </section>
 
     <!-- Info Section -->
@@ -117,23 +118,16 @@
                 </svg>
             </div>
             <h3>Dress Code</h3>
-            <p class="info-main">Elegante Sport</p>
+            <p class="info-main">Remerita</p>
         </div>
     </section>
 
     <!-- Mensaje Section -->
     <section class="message-section">
         <div class="message-content">
-            <p class="message-text">Quiero compartir este día tan especial con vos</p>
-            <p class="message-signature">Te espero!</p>
+            <p class="message-text">Quiero compartir este día tan especial con vos. Te espero!</p>
             <p class="signature-name">Juana</p>
         </div>
-    </section>
-
-    <!-- Video Brillo Section -->
-    <section class="video-section">
-        <video id="brillo-video" class="video-block lazy-video" muted loop playsinline preload="none" data-src="brillo.webm">
-        </video>
     </section>
 
     <!-- Confirmar Asistencia -->
