--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <video class="hero-video" muted loop playsinline>
                 <source src="brillo.webm" type="video/webm">
             </video>
+            <video class="hero-video" muted loop playsinline>
+                <source src="tiras.webm" type="video/webm">
+            </video>
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
@@ -124,6 +127,7 @@
 
     <!-- Mensaje Section -->
     <section class="message-section">
+        <div class="message-pattern"></div>
         <div class="message-content">
             <p class="message-text">Quiero compartir este día tan especial con vos. Te espero!</p>
             <p class="signature-name">Juana</p>
