--- a/index.html
+++ b/index.html
@@ -89,12 +89,7 @@
     <section class="info-section">
         <div class="info-card cuando">
             <div class="info-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                    <line x1="16" y1="2" x2="16" y2="6"></line>
-                    <line x1="8" y1="2" x2="8" y2="6"></line>
-                    <line x1="3" y1="10" x2="21" y2="10"></line>
-                </svg>
+                <img src="calendario.png" alt="Calendario">
             </div>
             <h3>Cuándo</h3>
             <p class="info-main">11 de Abril</p>
@@ -103,10 +98,7 @@
 
         <div class="info-card donde">
             <div class="info-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                    <circle cx="12" cy="10" r="3"></circle>
-                </svg>
+                <img src="ubi.png" alt="Ubicación">
             </div>
             <h3>Dónde</h3>
             <p class="info-main">Los Álamos 28</p>
@@ -116,13 +108,56 @@
 
         <div class="info-card dresscode">
             <div class="info-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M20.38 3.46L16 2a4 4 0 01-8 0L3.62 3.46a2 2 0 00-1.34 2.23l.58 3.47a1 1 0 00.99.84H6v10c0 1.1.9 2 2 2h8a2 2 0 002-2V10h2.15a1 1 0 00.99-.84l.58-3.47a2 2 0 00-1.34-2.23z"></path>
-                </svg>
+                <img src="dreecode.png" alt="Dress Code">
             </div>
             <h3>Dress Code</h3>
-            <p class="info-main">Remerita</p>
+            <p class="info-main">Elegante Sport</p>
         </div>
+    </section>
+
+    <!-- Colores Reservados Section -->
+    <section class="colors-section">
+        <div class="colors-header">
+            <svg class="palette-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="13.5" cy="6.5" r="0.5" fill="currentColor"></circle>
+                <circle cx="17.5" cy="10.5" r="0.5" fill="currentColor"></circle>
+                <circle cx="8.5" cy="7.5" r="0.5" fill="currentColor"></circle>
+                <circle cx="6.5" cy="12.5" r="0.5" fill="currentColor"></circle>
+                <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.688 0-.437-.18-.835-.437-1.125-.29-.289-.438-.652-.438-1.125a1.64 1.64 0 0 1 1.668-1.668h1.996c3.051 0 5.555-2.503 5.555-5.555C21.965 6.012 17.461 2 12 2z"></path>
+            </svg>
+            <h2 class="colors-title">Colores Reservados</h2>
+        </div>
+        <div class="colors-grid">
+            <!-- Azules claros -->
+            <div class="color-circle" style="background: #87CEEB;"></div>
+            <div class="color-circle" style="background: #A8D8EA;"></div>
+            <div class="color-circle" style="background: #B3E5FC;"></div>
+            <div class="color-circle" style="background: #81D4FA;"></div>
+            <!-- Turquesas -->
+            <div class="color-circle" style="background: #00BCD4;"></div>
+            <div class="color-circle" style="background: #26C6DA;"></div>
+            <div class="color-circle" style="background: #4DD0E1;"></div>
+            <div class="color-circle" style="background: #80DEEA;"></div>
+            <!-- Azules medios -->
+            <div class="color-circle" style="background: #03A9F4;"></div>
+            <div class="color-circle" style="background: #29B6F6;"></div>
+            <div class="color-circle" style="background: #0288D1;"></div>
+            <div class="color-circle" style="background: #1976D2;"></div>
+            <!-- Azules oscuros -->
+            <div class="color-circle" style="background: #1565C0;"></div>
+            <div class="color-circle" style="background: #0D47A1;"></div>
+            <div class="color-circle" style="background: #01579B;"></div>
+            <!-- Verdes azulados -->
+            <div class="color-circle" style="background: #00897B;"></div>
+            <div class="color-circle" style="background: #009688;"></div>
+            <div class="color-circle" style="background: #26A69A;"></div>
+            <div class="color-circle" style="background: #00796B;"></div>
+            <!-- Verdes petróleo -->
+            <div class="color-circle" style="background: #004D40;"></div>
+            <div class="color-circle" style="background: #00695C;"></div>
+            <div class="color-circle" style="background: #00363A;"></div>
+        </div>
+        <p class="colors-note">Por favor, evitá usar estos tonos en tu vestimenta para mantener la armonía visual del evento</p>
     </section>
 
     <!-- Mensaje Section -->
