--- a/confirmar.html
+++ b/confirmar.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmar Asistencia - Juana Mis 15</title>
+    <link rel="icon" type="image/png" href="juanita-icon.png">
+    <link rel="apple-touch-icon" href="juanita-icon.png">
+    <meta property="og:image" content="juanita-icon.png">
+    <meta name="msapplication-TileImage" content="juanita-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
