--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juana - Mis 15</title>
+    <link rel="icon" type="image/png" href="juanita-icon.png">
+    <link rel="apple-touch-icon" href="juanita-icon.png">
+    <meta property="og:image" content="juanita-icon.png">
+    <meta name="msapplication-TileImage" content="juanita-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="style.css" as="style">
