--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!-- Confirmar Asistencia -->
     <section class="confirm-section">
         <h2 class="section-title">Confirmá tu asistencia</h2>
-        <p class="confirm-text">Por favor confirmá antes del 1 de Abril</p>
+        <p class="confirm-text">Por favor confirmá antes del 10 de Marzo</p>
         <a href="confirmar.html" class="confirm-btn">Confirmar Asistencia</a>
     </section>
 
